--- a/Hyundai.html
+++ b/Hyundai.html
@@ -51,9 +51,9 @@
     <img  src="modelprice.png" alt="">
     </div>
 </div>
-    <div id="arrow">
-        <p> < </p>
-        <h6> ></h6>
+    <div class="arrow">
+       <img class="leftarrow" src="left.png" alt="">
+        <img class="rightarrow" src="right-arrow (1).png" alt="">
     </div>
     <div class="click">
         <button>Request a Test drive</button>
@@ -107,7 +107,7 @@
      </div>
      <div id="captions2">
         <h4>SOCIAL</h4>
-        <h2>Check out what’s trending</h2>
+        <h2>Check out what's trending</h2>
     </div>
     <div class="secondimg1">
         <img src="secondimg1.jpg" alt="dsfsdfsedrgswgw">
@@ -124,17 +124,15 @@
          <h1>News</h1>
          <div class="newsin">
             <p>India News|  2023-11-01</p>
-                <h1>Hyundai Motor India Limited Registers Monthly <br>Total Sales of 68 728 units in October’23</h1>
-                <button>Learn More</button>
+            <h1>Hyundai Motor India Limited Registers Monthly <br>Total Sales of 68 728 units in October’23</h1>
+            <button>Learn More</button>
          </div>
     </div>
     <div class="lastcaps">
-       
         <h1>Find a Dealer & Website</h1><br>
         <p>Locate your nearest dealership and visit website.</p>
     </div>
     <div class="select">
-        
         <select>erhed
            <option value="">Select Dealership</option>
            <option value=""></option>
@@ -149,10 +147,8 @@
             <option value="">Select a City</option>
         </select><br>
         <button>Serch</button>
- 
     </div>
     <div class="footers">
-
         <img src="footer.png" alt="">
     </div>
     <footer class="stickfooter">
